<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>imp_ros_network_stats</name>
  <version>0.9.4</version>
  <description>
  ROS2 Python nodes that publish delay and packet loss statistics for periodic traffic.
  </description>
  <maintainer email="khaleel@imperiumdrive.com">Khaleel Husain</maintainer>
  <license>Apache License 2.0</license>

  <author>Khaleel Husain</author>
  <author email="khaleel@imperiumdrive.com">Khaleel Husain</author>

  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>imp_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
